<resources>
    <string name="app_name">PartyVit</string>
    <string name="presents_text_view">Presenta:</string>
    <string name="question_text_view">¿Sabes qué clase de fiestero eres?</string>
    <string name="motivation_text_view"> Atrévete a descubrirlo</string>
    <string name="name_edit_text">Nombre</string>
    <string name="email_edit_text">Correo electrónico</string>
    <string name="start_button">Comenzar</string>
    <string name="warning_text_view">Si bebes no manejes ¡Pide Vit!</string>
    <string name="first_question_text_view">Se acerca el fin de semana y tú...</string>
    <string name="option1_ask_one_radio_button">Ya comenzaste hacer planes de la fiesta a la que irás.</string>
    <string name="option2_ask_one_radio_button">No puedes espera a llegar a  tu casa y dormir un poco.</string>
    <string name="option1_ask_two_radio_button">No te importa no hablar con nadie y te mantienes con el amigo que llegaste.</string>
    <string name="option2_ask_two_radio_button">Hablas con todos y haces nuevos amigos como siempre.</string>
    <string name="next_button">Siguiente</string>
    <string name="second_question_text_view">Si vas a una fiesta donde no conoces a nadie tú...</string>
    <string name="option1_ask_three_radio_button">Prefieres no ir, no sabes quienes estaran alli o donde será.</string>
    <string name="option2_ask_three_radio_button">Te arreglas de inmediato, ni siquiera preguntas en donde será.</string>
    <string name="thir_question_text_view">Cuando te invitan a una fiesta tú...</string>
    <string name="fourth_question_text_view">¿A dónde prefieres ir un viernes en la noche?</string>
    <string name="option1_ask_fourth_radio_button">Al cine.</string>
    <string name="option2_ask_fourth_radio_button">A un concierto.</string>
    <string name="five_question_text_view">¿Cuál de estos planes va más contigo?</string>
    <string name="option1_ask_five_radio_button">Una noche de maratón de películas y comida chatarra.</string>
    <string name="option2_ask_five_radio_button">Ir a un lugar con música en vivo donde puedas bailar y platicar.</string>
    <string name="result_button">Ver resultado</string>
    <string name="result_text_view">Resultado:</string>
    <string name="first_option1_text_view">Las fiestas no son lo tuyo y las evades cada vez que te invitan a una. Prefieres quedarte en tu casa.</string>
    <string name="first_option2_text_view">Es por eso que Vit te invita a que disfrutes y descubras nuevos lugares, con  un código de descuento para que puedas salir más seguido.</string>
    <string name="code_text_view">CÓDIGO:FIESTAVIT</string>
    <string name="exit_button">Salir</string>
    <string name="second_option1_text_view">La fiesta no comienza hasta que tu llegas, te la pasas hablando con todos y conociendo a gente nueva.</string>
    <string name="second_option2_text_view">Es por eso que Vit te premia con un código de descuento para que sigas disfrutando de las fiestas.</string>
    <string name="message">"Debes marcar una respuesta"</string>
</resources>
